--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "baseUrl": ".",
-    "outDir": "./lib"
+    "baseUrl": "./src",
+    "outDir": "./dist",
   }
 }
