--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "author": "cmg8431 <cmg8431@gmail.com>",
   "license": "MIT",
   "type": "module",
+  "exports": {
+    ".": {
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.cjs.map",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "main": "./dist/index.cjs",
   "module": "./dist/index.cjs.map",
   "types": "./dist/index.d.ts",
