--- a/package.json
+++ b/package.json
@@ -7,21 +7,17 @@
   "license": "MIT",
   "type": "module",
   "exports": {
-    ".": {
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.cjs.map",
-      "types": "./dist/index.d.ts"
-    }
+    "import": "./dist/index.js",
+    "require": "./dist/index.js"
   },
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.cjs.map",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "keywords": [
     "slack",
     "bot"
   ],
   "files": [
-    "dist"
+    "dist/**/*"
   ],
   "scripts": {
     "prepare": "husky install",
