--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "test:coverage": "jest --coverage"
   },
   "devDependencies": {
+    "@slack/types": "^2.11.0",
     "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
